--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="/src/style.css" rel="stylesheet">
-  <title>ESN MoRe Team Manager</title>
+  <title>ESN MoRe - Manager membri</title>
   <link rel="shortcut icon" href="https://more.esn.it/sites/esnmodena.it/files/favicon.ico"
     type="image/vnd.microsoft.icon">
   <style>
