--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -5,7 +5,29 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="/src/style.css" rel="stylesheet">
+
+  <!-- Primary Meta Tags -->
   <title>ESN MoRe - Members Manager</title>
+  <meta name="title" content="ESN MoRe - Members Manager" />
+  <meta name="description"
+    content="Pannello amministratore per la gestione dei membri di ESN Modena e Reggio Emilia." />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://esn-more-members.bitrey.it" />
+  <meta property="og:title" content="ESN MoRe - Members Manager" />
+  <meta property="og:description"
+    content="Pannello amministratore per la gestione dei membri di ESN Modena e Reggio Emilia." />
+  <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+  <!-- X (Twitter) -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://esn-more-members.bitrey.it" />
+  <meta property="twitter:title" content="ESN MoRe - Members Manager" />
+  <meta property="twitter:description"
+    content="Pannello amministratore per la gestione dei membri di ESN Modena e Reggio Emilia." />
+  <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
   <link rel="shortcut icon" href="https://more.esn.it/sites/esnmodena.it/files/favicon.ico"
     type="image/vnd.microsoft.icon">
   <style>
