--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="/src/style.css" rel="stylesheet">
 
+  <!-- Disallow search engines from indexing the site -->
+  <meta name="robots" content="noindex, nofollow" />
+
   <!-- Primary Meta Tags -->
   <title>ESN MoRe - Members Manager</title>
   <meta name="title" content="ESN MoRe - Members Manager" />
